modificat fis README