@@ -1,1 +1,3 @@
 "# java-policy-example" 
+
+Pentru a rula programul, deschidem terminalul, compilam clasa 'Main' si apoi o rulam cu urmatorul cod: 'java -Djava.security.manager -Djava.security.policy=file:/calea/absoluta/catre/politica.policy Main'
